# bito

./: .gitignore  .justfile  .repo.yml  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  THIRD-PARTY-NOTICES  cliff.toml  deny.toml
.github/: formula.rb.tmpl
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/docs/: README.md  releases.md
.github/workflows/: cd.yml
config/: bito.toml.example  bito.yaml.example
crates/bito/: Cargo.toml
crates/bito-core/: Cargo.toml
crates/bito-core/src/: config.rs  error.rs  lib.rs  observability.rs  tokens.rs
crates/bito/src/: lib.rs  main.rs  server.rs
crates/bito/src/commands/: analyze.rs  completeness.rs  custom.rs  doctor.rs  grammar.rs  info.rs  lint.rs  readability.rs  serve.rs  tokens.rs
crates/bito/tests/: cli.rs  config_integration.rs
docs/: README.md  tokens.md
npm/bito/: index.js  install.js  package.json
scripts/: rename.sh
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/commands/: completions.rs  install.rs  man.rs
