[package]
name = "bito"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
exclude = [
    # Workspace-level files (/ = workspace root)
    # Copier answers file (template state, not project code)
    "/.repo.yml",
   "/.claude/",
    "/.github/",
    "/AGENTS.md",
    "/.justfile",
    "/.markdownlint.yaml",
    "/docs/",
    "/deny.toml",
]

[[bin]]
name = "bito"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }.tar.gz"
bin-dir = "bin/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }.zip"
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }.zip"
pkg-fmt = "zip"

[features]
default = ["mcp"]
mcp = ["dep:tokio", "dep:rmcp", "dep:schemars"]

[dependencies]
bito-core = { version = "1.0", path = "../bito-core", features = ["clap"] }
clap = { version = "4.6", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tokio = { version = "1.50", features = ["rt-multi-thread", "macros"], optional = true }
rmcp = { version = "1.3", features = ["server", "transport-io", "macros"], optional = true }
schemars = { version = "1.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
owo-colors = { version = "4.3", features = ["supports-colors"] }
indicatif = "0.18"
camino = { version = "1.2", features = ["serde1"] }

[dev-dependencies]
assert_cmd = "2.2"
predicates = "3.1"
tempfile = "3.27"
[lints]
workspace = true
